--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>触診マニュアル（腰部・下肢）マスター試験</title>
+<title>触診マニュアル（腰部・下肢）完全攻略マスター</title>
 <style>
     body { font-family: "Helvetica Neue", Arial, sans-serif; line-height: 1.6; color: #333; background-color: #f0f8ff; margin: 0; padding: 20px; }
     .container { max-width: 800px; margin: 0 auto; background: #fff; padding: 25px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.08); position: relative; }
@@ -142,7 +142,7 @@ const poolPart1 = [
     {q:"長母趾伸筋腱が触れやすい部位は？",o:["下腿近位","足関節の前方（前脛骨筋腱の外側）","外果の後ろ","踵"],c:1,r:"足関節の前方で、前脛骨筋腱の外側から深層に入った腱を確認できます。",s:"67ページ"},
     {q:"浅腓骨神経を圧迫して放散痛を確認する部位は？",o:["膝窩中央","腓骨頭の前方直下（前脛骨筋と長腓骨筋の境界）","内果の下","アキレス腱の内側"],c:1,r:"腓骨頭の前方直下を圧迫すると、下腿外側から足背へ放散痛が生じます。",s:"67ページ"},
     {q:"腓腹筋を触診する際、足関節をどう動かすと膨隆するか？",o:["背屈","底屈（つま先で床を押す）","内反","外反"],c:1,r:"つま先で床を押すように底屈すると、手掌の中で大きく膨隆します。",s:"69ページ"},
-    {q:"ヒラメ筋を触診する際、腓腹筋と区別するための方法は？",o:["膝を伸ばして行う","膝を曲げて行う","足趾を反らす","踵を床につける"],c:1,r:"腓腹筋は膝関節を越えるため、膝を曲げると緩みますが、ヒラメ筋は単関節筋なので膝屈曲位でも収縮を確認しやすいはずですが、マニュアルでは「踵から10cm上方」などを触れる記述が主です。文脈的にヒラメ筋は腓腹筋の深層・遠位で触れます。",s:"69ページ"},
+    {q:"ヒラメ筋を触診する際、腓腹筋と区別するための方法は？",o:["膝を伸ばして行う","膝を曲げて行う","足趾を反らす","踵を床につける"],c:1,r:"膝を曲げて（腓腹筋を緩めて）行うか、腓腹筋の深層・遠位（踵から10cm上方など）で触れます。",s:"69ページ"},
     {q:"脛骨神経を触診する際、膝窩のどこを圧迫するか？",o:["中央（腓腹筋内側頭と外側頭の間）","最外側","最内側","膝蓋骨の上"],c:0,r:"膝裏の中央に母指を沈め、脛骨粗面方向へ圧迫すると放散痛を確認できます。",s:"70ページ"},
     {q:"膝窩筋を触診する際、下腿をどう動かすと緊張するか？",o:["外旋","内旋","外反","内反"],c:1,r:"踵を接地したまま足先を内側に向ける（下腿内旋）と、脛骨内側縁の裏側でわずかに緊張します。",s:"70ページ"},
     {q:"長腓骨筋の収縮を確認する足の動きは？",o:["母趾を上げる","小趾側を浮かせる（外がえし）","踵を上げる","つま先を上げる"],c:1,r:"踵と母指球をつけたまま、小趾を浮かせる（外がえし）と腓骨頭直下で収縮します。",s:"72ページ"},
@@ -150,40 +150,84 @@ const poolPart1 = [
     {q:"長腓骨筋腱と短腓骨筋腱の位置関係（外果後方）は？",o:["長腓骨筋が前、短腓骨筋が後","短腓骨筋が前（深部）、長腓骨筋が後（表層）","並列している","交差している"],c:1,r:"短腓骨筋は外果の直後（深部）、長腓骨筋はその表層（後方）を通ります。指を後方にずらすと短腓骨筋の後縁に落ち込みます。",s:"73ページ"},
     {q:"総腓骨神経（腓骨神経）の触診部位は？",o:["腓骨頭の後方やや内側","腓骨頭の真上","脛骨粗面","膝窩中央"],c:0,r:"腓骨頭の後方・やや内側を圧迫し、指をスライドさせると索状の神経と放散痛を確認できます。",s:"73ページ"},
 ];
-// --- 問題データプール Part 3 (No.201 - 250 + システム) ---
-const poolPart3 = [
+// --- 問題プール パート2 (大腿・膝・下腿・足部・システム) ---
+const poolPart2 = [
+    // 大腿後方・内側（ハムストリングス・内転筋・神経）
+    [cite_start]{q:"半腱様筋を触診する際、足先をどうして膝を屈曲させるか？",o:["外側に向ける","内側に向ける","背屈する","底屈する"],c:1,r:"足先を内側に向けて（下腿内旋位で）膝の等尺性屈曲を行うと腱が浮き出ます[cite:1922]。"},
+    [cite_start]{q:"半膜様筋の筋腹は、半腱様筋腱のどの位置で触れるか？",o:["表層","奥（深層）","外側","遠位"],c:1,r:"半腱様筋の腱の奥（大腿遠位後面内側）で、幅広い筋腹として触れます[cite:1925]。"},
+    [cite_start]{q:"大腿二頭筋長頭腱が浮き出る動作は？",o:["膝を伸ばす","椅坐位から殿部を浮かせる（立ち上がる）","足を組む","膝を内側に倒す"],c:1,r:"椅坐位から頭を下げて立ち上がるように殿部を浮かせると、膝外側後方に太い腱が浮き出ます[cite:1929]。"},
+    [cite_start]{q:"大腿二頭筋短頭はどこで触れるか？",o:["外側広筋後縁と大腿二頭筋腱の間","大腿二頭筋腱の後ろ","膝窩の中央","半腱様筋の内側"],c:0,r:"外側広筋後縁と大腿二頭筋腱との間で触れる柔軟な部分です[cite:1933]。"},
+    [cite_start]{q:"長内転筋の触診で、股関節をどう動かすと緊張するか？",o:["伸展・外転","屈曲・内転","伸展・内転","反対側の膝を曲げて腰を下ろす（伸展・外転位）"],c:3,r:"立位で開脚し、反対側の膝を曲げて腰を下ろしていく（伸張させる）と緊張を確認しやすいです[cite:1960]。"},
+    [cite_start]{q:"薄筋を触診する際、骨盤をどう回旋させると触れやすいか？",o:["同側に回旋","反対側に回旋","回旋しない","後傾させる"],c:1,r:"椅坐位で脚を伸ばして開き、骨盤を反対側に捻った状態で大腿内側を撫で上げると触れやすいです[cite:1964]。"},
+    [cite_start]{q:"伏在神経を触診する際のランドマークとなる筋は？",o:["大腿直筋","外側広筋","内側広筋（の最後部）と大内転筋の間","半膜様筋"],c:2,r:"大腿骨内側顆の近位、内側広筋の最後部（内側縁）を圧迫して確認します[cite:1967]。"},
+
+    // 膝関節（骨・靭帯・軟部組織）
+    [cite_start]{q:"膝蓋骨は、大腿四頭筋内に存在する人体最大の何か？",o:["扁平骨","種子骨","長管骨","不整骨"],c:1,r:"膝蓋骨は人体最大の種子骨です[cite:1975]。"},
+    [cite_start]{q:"膝蓋骨の下縁（尖った部分）を確認するには、膝蓋骨をどう押すか？",o:["上縁を下方に押す","下縁を上方に押す","内側を押す","外側を押す"],c:0,r:"上縁を下方に押すと、下縁（膝蓋骨尖）が浮き上がり確認しやすくなります[cite:1992]。"},
+    [cite_start]{q:"大腿骨膝蓋面（滑車）を触診するのに適した膝の肢位は？",o:["完全伸展位","90度屈曲位","深屈曲（全屈曲）位","過伸展位"],c:2,r:"膝を深く曲げると膝蓋骨が遠位に移動し、膝蓋骨の手前（近位）で膝蓋面が露出します[cite:1995]。"},
+    [cite_start]{q:"脛骨粗面の位置は、膝蓋骨からどの程度遠位か？",o:["1横指","3横指","5横指","10横指"],c:1,r:"膝蓋骨から約3横指遠位にある骨の膨らみです[cite:1999]。"},
+    [cite_start]{q:"大腿骨外側上顆は、大腿骨外側顆のどのあたりにあるか？",o:["最前方","中央やや後方","最後方","最遠位"],c:1,r:"大腿骨外側顆の中央やや後方で、最も膨らんだ部位です[cite:2024]。"},
+    [cite_start]{q:"ガーディー結節の位置は？",o:["脛骨粗面の真下","脛骨粗面のすぐ外側（脛骨前外側部最近位）","腓骨頭の後ろ","膝蓋骨の上"],c:1,r:"脛骨粗面の外側にある斜線を近位へたどり、関節裂隙のすぐ遠位にある膨らみです[cite:2033]。"},
+    [cite_start]{q:"腓骨頭は下腿近位のどの位置にあるか？",o:["最内側","最外側（かつ後方）","最前方","関節内"],c:1,r:"下腿近位部を膝の後方から触れるとき、最後方・最外側で触れる骨隆起です[cite:2036]。"},
+    [cite_start]{q:"内転筋結節の位置は、内側上顆から見てどこか？",o:["1横指近位、1横指後方","1横指遠位、1横指前方","真下","真上"],c:0,r:"内側上顆から1横指近位、1横指後方に位置し、大内転筋腱が付着します[cite:2094]。"},
+    [cite_start]{q:"膝蓋下脂肪体はどの靭帯の深層に存在するか？",o:["内側側副靭帯","外側側副靭帯","膝蓋靭帯","前十字靭帯"],c:2,r:"膝蓋骨と脛骨粗面をつなぐ膝蓋靭帯の深層に存在します[cite:2097]。"},
+    [cite_start]{q:"膝蓋下脂肪体の触診で、一方を推すと反対側がどうなるか？",o:["凹む","押し出される（膨らむ）","変わらない","痛む"],c:1,r:"連結しているため、一方を押すと反対側の指に押し出される感覚があります[cite:2123]。"},
+    [cite_start]{q:"大腿四頭筋腱の形状は？",o:["円形","四角形","膝蓋骨底を底辺とする三角形","線状"],c:2,r:"内側広筋と外側広筋の間にあり、膝蓋骨底を底辺とする三角形をしています[cite:2128]。"},
+    [cite_start]{q:"膝蓋靭帯の緊張を確認する動作は？",o:["膝を伸ばして踵を持ち上げる（床を押す）","膝を曲げる","つま先を上げる","膝を内に入れる"],c:0,r:"膝90度屈曲位で、踵で床を押す（膝伸展しようとする）と緊張します[cite:2131]。"},
+    [cite_start]{q:"内側側副靭帯（MCL）の触診位置は？",o:["関節裂隙の前方","関節裂隙の側方で指が入らなくなる部分のさらに2横指後方","膝蓋骨の直上","膝窩の中央"],c:1,r:"関節裂隙を側方へたどり、指が入らなくなる所からさらに2横指後方で再び触れる裂隙の間にあります[cite:2136]。"},
+    [cite_start]{q:"腸脛靭帯を触診する際、膝を伸ばしたまま腰をどうすると触れやすいか？",o:["反対側に引く","同側に突き出す","前屈する","後屈する"],c:1,r:"膝を伸ばしたまま腰を同側に突き出すと、大腿外側で緊張して触れやすくなります[cite:2157]。"},
+    [cite_start]{q:"腸脛靭帯の遠位付着部は？",o:["腓骨頭","脛骨粗面","ガーディー結節","内側顆"],c:2,r:"大腿骨外側上顆を通過し、脛骨のガーディー結節に付着します[cite:2159]。"},
+    [cite_start]{q:"外側側副靭帯（LCL）を触診する際の肢位は？",o:["完全伸展位","あぐらをかくように足を乗せる（股関節屈曲外旋・膝屈曲）","正座","仰向け"],c:1,r:"あぐらをかくように足を乗せると、腓骨頭から大腿骨へ走る索状の靭帯が触れやすくなります[cite:2168]。"},
+
+    // 下腿（骨・筋・神経）
+    [cite_start]{q:"脛骨の断面はどのような形状か？",o:["円形","四角形","三角形","楕円形"],c:2,r:"前縁、骨間縁、内側縁の3つの稜線を持つ三角形をしています[cite:2170]。"},
+    [cite_start]{q:"脛骨内側縁より後方（内側）にある近位の筋肉は？",o:["前脛骨筋","長趾伸筋","腓腹筋・ヒラメ筋","長腓骨筋"],c:2,r:"脛骨内側縁の後方には、近位では腓腹筋とヒラメ筋があります[cite:2206]。"},
+    [cite_start]{q:"「弁慶の泣き所」と呼ばれる骨隆起は？",o:["脛骨前縁","脛骨内側縁","腓骨前縁","腓骨後縁"],c:0,r:"脛骨の前面を縦に延びる鋭い骨隆起が脛骨前縁です[cite:2172]。"},
+    [cite_start]{q:"前脛骨筋を触診する際の足の動きは？",o:["底屈・外反","背屈・内反","底屈・内反","背屈・外反"],c:1,r:"踵をつけて足先を強く持ち上げる（背屈かつ内反）と大きく膨隆します[cite:2227]。"},
+    [cite_start]{q:"長趾伸筋を触診する際の足の動きは？",o:["足趾を床から浮かせる（伸展）","足趾を曲げる","足首を底屈する","踵を上げる"],c:0,r:"足底をつけたまま足趾を浮かせると、腓骨頭の前方で収縮します[cite:2231]。"},
+    [cite_start]{q:"長母趾伸筋腱が触れやすい部位は？",o:["下腿近位","足関節の前方（前脛骨筋腱の外側）","外果の後ろ","踵"],c:1,r:"足関節の前方で、前脛骨筋腱の外側から深層に入った腱を確認できます[cite:2236]。"},
+    [cite_start]{q:"浅腓骨神経を圧迫して放散痛を確認する部位は？",o:["膝窩中央","腓骨頭の前方直下（前脛骨筋と長腓骨筋の境界）","内果の下","アキレス腱の内側"],c:1,r:"腓骨頭の前方直下を圧迫すると、下腿外側から足背へ放散痛が生じます[cite:2239]。"},
+    [cite_start]{q:"腓腹筋を触診する際、足関節をどう動かすと膨隆するか？",o:["背屈","底屈（つま先で床を押す）","内反","外反"],c:1,r:"つま先で床を押すように底屈すると、手掌の中で大きく膨隆します[cite:2268]。"},
+    [cite_start]{q:"ヒラメ筋を触診する際、腓腹筋と区別するための方法は？",o:["膝を伸ばして行う","膝を曲げて行う","足趾を反らす","踵を床につける"],c:1,r:"膝を曲げて（腓腹筋を緩めて）行うか、腓腹筋の深層・遠位（踵から10cm上方など）で触れます[cite:2270]。"},
+    [cite_start]{q:"脛骨神経を触診する際、膝窩のどこを圧迫するか？",o:["中央（腓腹筋内側頭と外側頭の間）","最外側","最内側","膝蓋骨の上"],c:0,r:"膝裏の中央に母指を沈め、脛骨粗面方向へ圧迫すると放散痛を確認できます[cite:2279]。"},
+    [cite_start]{q:"膝窩筋を触診する際、下腿をどう動かすと緊張するか？",o:["外旋","内旋","外反","内反"],c:1,r:"踵を接地したまま足先を内側に向ける（下腿内旋）と、脛骨内側縁の裏側でわずかに緊張します[cite:2282]。"},
+    [cite_start]{q:"長腓骨筋の収縮を確認する足の動きは？",o:["母趾を上げる","小趾側を浮かせる（外がえし）","踵を上げる","つま先を上げる"],c:1,r:"踵と母指球をつけたまま、小趾を浮かせる（外がえし）と腓骨頭直下で収縮します[cite:2312]。"},
+    [cite_start]{q:"短腓骨筋の収縮を確認する足の動きは？",o:["強く背屈する","強く底屈しながら外がえし","内がえし","指を反らす"],c:1,r:"つま先を床につけたまま強く底屈（および外がえし傾向）すると、下腿遠位外側で収縮します[cite:2314]。"},
+    [cite_start]{q:"長腓骨筋腱と短腓骨筋腱の位置関係（外果後方）は？",o:["長腓骨筋が前、短腓骨筋が後","短腓骨筋が前（深部）、長腓骨筋が後（表層）","並列している","交差している"],c:1,r:"短腓骨筋は外果の直後（深部）、長腓骨筋はその表層（後方）を通ります。指を後方にずらすと短腓骨筋の後縁に落ち込みます[cite:2317]。"},
+    [cite_start]{q:"総腓骨神経（腓骨神経）の触診部位は？",o:["腓骨頭の後方やや内側","腓骨頭の真上","脛骨粗面","膝窩中央"],c:0,r:"腓骨頭の後方・やや内側を圧迫し、指をスライドさせると索状の神経と放散痛を確認できます[cite:2321]。"},
+
     // 足関節・足部（骨）
-    {q:"距腿関節（足関節）の可動域は、底屈と背屈どちらが大きいか？",o:["背屈","底屈","同じ","個人差が大きい"],c:1,r:"底屈60°、背屈20°であり、底屈の方が可動域が大きいです。",s:"78ページ"},
-    {q:"距骨滑車は、足関節を背屈するとどうなるか？",o:["前方に移動する","後方に飛び出す","消える","回旋する"],c:1,r:"背屈時には距骨滑車は後方に飛び出し、底屈時には触れられなくなります。",s:"79ページ"},
-    {q:"距骨内側結節（後突起）の触診位置は？",o:["内果の1横指前方","内果の遠位端の1横指後方","外果の下","アキレス腱の外側"],c:1,r:"内果遠位端の1横指後方で、疼痛を伴い触知できる小さな骨隆起です。",s:"79ページ"},
-    {q:"距骨外側結節（後突起）を触れるには、アキレス腱のどこに指を沈めるか？",o:["深部（前方）","表層（後方）","内側","上"],c:0,r:"外果後方からアキレス腱の深部（前方）に指を深く沈めると触れられます。",s:"80ページ"},
-    {q:"外果と内果、前額面ではどちらが上方（近位）にあるか？",o:["外果","内果","同じ高さ","個人差がある"],c:1,r:"内果は外果よりも上方に位置しています。これにより内がえし可動域が大きくなります。",s:"81ページ"},
-    {q:"踵骨隆起はアキレス腱の付着部だが、触れにくい面は？",o:["後面","外側面","足底面・内側面","上面"],c:2,r:"足底面や内側面は足底腱膜や筋により触れにくいです。",s:"84ページ"},
-    {q:"腓骨筋滑車は外果のどのあたりにあるか？",o:["1横指近位","1横指遠位（下方）","真横","真後ろ"],c:1,r:"外果の指幅1本分（1横指）遠位で触れる骨の膨らみです。",s:"85ページ"},
-    {q:"載距突起の触診位置は？",o:["内果の1横指遠位（直下）","外果の下","踵の後ろ","足の甲"],c:0,r:"内果の下端から足底方向へ1横指先で触れる骨隆起です。",s:"86ページ"},
-    {q:"足根洞は外果のどの位置にあるか？",o:["1横指前方かつ下方","1横指後方","真上","真下"],c:0,r:"外果の1横指前方かつ下方にある窪みで、足を回外（内反）すると大きく開きます。",s:"86ページ"},
-    {q:"舟状骨粗面は内果からどの方向に約3横指か？",o:["真下","45°前下方","真後ろ","真上"],c:1,r:"内果から45°前下方、約3横指のところにある骨隆起です。",s:"89ページ"},
-    {q:"舟状骨粗面に付着する腱を確認するための動作は？",o:["背屈","強く底屈（内がえし）","指を反らす","外がえし"],c:1,r:"足先を強く下げる（底屈・内がえし）と、後脛骨筋腱が浮き出ます。",s:"89ページ"},
-    {q:"踵立方関節の裂隙を探す際、目印となるのは？",o:["足根洞","内果","距骨頭","第1中足骨"],c:0,r:"足根洞の前方部分の下方、または第5中足骨粗面の近位にある段差（立方骨）のさらに近位です。",s:"90ページ"},
-    {q:"第5中足骨粗面（下駄履き骨折の好発部位）は足部外側のどこにあるか？",o:["足部中央外側","足先","踵","内側"],c:0,r:"足部外側縁の中央付近で触れる膨らみです。短腓骨筋腱が付着します。",s:"93ページ"},
-    {q:"リスフラン関節（足根中足関節）の外側部を確認するには、第5中足骨をどう動かすか？",o:["回す","底背側に動かす","引っ張る","圧迫する"],c:1,r:"第5中足骨を底背側へと動かすと、立方骨との関節裂隙を触知できます。",s:"95ページ"},
-    {q:"母趾中足骨の近位（底部）は何という骨と関節するか？",o:["舟状骨","内側楔状骨","立方骨","距骨"],c:1,r:"母趾中足骨の近位は内側楔状骨と関節します。",s:"96ページ"},
+    [cite_start]{q:"距腿関節（足関節）の可動域は、底屈と背屈どちらが大きいか？",o:["背屈","底屈","同じ","個人差が大きい"],c:1,r:"底屈60°、背屈20°であり、底屈の方が可動域が大きいです[cite:2367]。"},
+    [cite_start]{q:"距骨滑車は、足関節を背屈するとどうなるか？",o:["前方に移動する","後方に飛び出す","消える","回旋する"],c:1,r:"背屈時には距骨滑車は後方に飛び出し、底屈時には触れられなくなります[cite:2376]。"},
+    [cite_start]{q:"距骨内側結節（後突起）の触診位置は？",o:["内果の1横指前方","内果の遠位端の1横指後方","外果の下","アキレス腱の外側"],c:1,r:"内果遠位端の1横指後方で、疼痛を伴い触知できる小さな骨隆起です[cite:2379]。"},
+    [cite_start]{q:"距骨外側結節（後突起）を触れるには、アキレス腱のどこに指を沈めるか？",o:["深部（前方）","表層（後方）","内側","上"],c:0,r:"外果後方からアキレス腱の深部（前方）に指を深く沈めると触れられます[cite:2384]。"},
+    [cite_start]{q:"外果と内果、前額面ではどちらが上方（近位）にあるか？",o:["外果","内果","同じ高さ","個人差がある"],c:1,r:"内果は外果よりも上方に位置しています。これにより内がえし可動域が大きくなります[cite:2388]。"},
+    [cite_start]{q:"踵骨隆起はアキレス腱の付着部だが、触れにくい面は？",o:["後面","外側面","足底面・内側面","上面"],c:2,r:"足底面や内側面は足底腱膜や筋により触れにくいです[cite:2425]。"},
+    [cite_start]{q:"腓骨筋滑車は外果のどのあたりにあるか？",o:["1横指近位","1横指遠位（下方）","真横","真後ろ"],c:1,r:"外果の指幅1本分（1横指）遠位で触れる骨の膨らみです[cite:2432]。"},
+    [cite_start]{q:"載距突起の触診位置は？",o:["内果の1横指遠位（直下）","外果の下","踵の後ろ","足の甲"],c:0,r:"内果の下端から足底方向へ1横指先で触れる骨隆起です[cite:2437]。"},
+    [cite_start]{q:"足根洞は外果のどの位置にあるか？",o:["1横指前方かつ下方","1横指後方","真上","真下"],c:0,r:"外果の1横指前方かつ下方にある窪みで、足を回外（内反）すると大きく開きます[cite:2439]。"},
+    [cite_start]{q:"舟状骨粗面は内果からどの方向に約3横指か？",o:["真下","45°前下方","真後ろ","真上"],c:1,r:"内果から45°前下方、約3横指のところにある骨隆起です[cite:2492]。"},
+    [cite_start]{q:"舟状骨粗面に付着する腱を確認するための動作は？",o:["背屈","強く底屈（内がえし）","指を反らす","外がえし"],c:1,r:"足先を強く下げる（底屈・内がえし）と、後脛骨筋腱が浮き出ます[cite:2495]。"},
+    [cite_start]{q:"踵立方関節の裂隙を探す際、目印となるのは？",o:["足根洞","内果","距骨頭","第1中足骨"],c:0,r:"足根洞の前方部分の下方、または第5中足骨粗面の近位にある段差（立方骨）のさらに近位です[cite:2499]。"},
+    [cite_start]{q:"第5中足骨粗面（下駄履き骨折の好発部位）は足部外側のどこにあるか？",o:["足部中央外側","足先","踵","内側"],c:0,r:"足部外側縁の中央付近で触れる膨らみです。短腓骨筋腱が付着します[cite:2522]。"},
+    [cite_start]{q:"リスフラン関節（足根中足関節）の外側部を確認するには、第5中足骨をどう動かすか？",o:["回す","底背側に動かす","引っ張る","圧迫する"],c:1,r:"第5中足骨を底背側へと動かすと、立方骨との関節裂隙を触知できます[cite:2543]。"},
+    [cite_start]{q:"母趾中足骨の近位（底部）は何という骨と関節するか？",o:["舟状骨","内側楔状骨","立方骨","距骨"],c:1,r:"母趾中足骨の近位は内側楔状骨と関節します[cite:2551]。"},
 
     // 足関節・足部（靭帯・筋）
-    {q:"外側側副靭帯を構成する3つの靭帯に含まれないのは？",o:["前距腓靭帯","後距腓靭帯","踵腓靭帯","三角靭帯"],c:3,r:"三角靭帯は内側の靭帯です。",s:"97ページ"},
-    {q:"前距腓靭帯（ATFL）が緊張する肢位は？",o:["背屈・外がえし","底屈・内がえし（内旋）","背屈・内がえし","中間位"],c:1,r:"足関節を底屈し、内側に向ける（内旋する）と緊張します。",s:"98ページ"},
-    {q:"踵腓靭帯（CFL）が緊張する肢位は？",o:["外がえし","内がえし（回外）","背屈","底屈"],c:1,r:"足部を他動で回外（内がえし）すると、外果から斜め後下方に緊張します。",s:"98ページ"},
-    {q:"後距腓靭帯（PTFL）の触診位置は？",o:["外果の後方","外果の前方","内果の後方","アキレス腱の上"],c:0,r:"外果の後方、距骨外側結節と同じ高さで触れます。",s:"99ページ"},
-    {q:"アキレス腱の付着部にある脂肪体が押し出される肢位は？",o:["底屈位","背屈位","内反位","外反位"],c:1,r:"背屈位では踵骨とアキレス腱の角度が鋭角となり、脂肪体が押し出されます。",s:"101ページ"},
-    {q:"足背で触知できる動脈は？",o:["後脛骨動脈","足背動脈","腓骨動脈","大腿動脈"],c:1,r:"足背内側（第1-2中足骨間付近）で足背動脈の拍動を触知できます。",s:"104ページ"},
-    {q:"母趾内転筋の作用として重要なのは？",o:["縦アーチの保持","横アーチの保持","足指の伸展","背屈"],c:1,r:"足底を横断しているため、横アーチを保持する作用があります。",s:"108ページ"},
-    {q:"外反母趾の進行防止に寄与する筋として挙げられているのは？",o:["母趾外転筋","長母趾伸筋","前脛骨筋","腓腹筋"],c:0,r:"母趾外転筋、短趾屈筋、母趾内転筋などが寄与します。",s:"108ページ"},
-    {q:"二分靭帯（Y靭帯）の損傷しやすい部位は？",o:["足背外側","足底","内果下","アキレス腱"],c:0,r:"足背の外側、踵骨から舟状骨・立方骨へ向かう部位で損傷しやすいです。",s:"104ページ"},
-    {q:"長母趾屈筋腱が通る「載距突起の下」にある溝の名前は？",o:["長母趾屈筋腱溝","腓骨筋滑車","足根洞","内転筋管"],c:0,r:"載距突起の下方にある長母趾屈筋腱溝を通過します。",s:"85ページ"}
+    [cite_start]{q:"外側側副靭帯を構成する3つの靭帯に含まれないのは？",o:["前距腓靭帯","後距腓靭帯","踵腓靭帯","三角靭帯"],c:3,r:"三角靭帯は内側の靭帯です[cite:2556]。"},
+    [cite_start]{q:"前距腓靭帯（ATFL）が緊張する肢位は？",o:["背屈・外がえし","底屈・内がえし（内旋）","背屈・内がえし","中間位"],c:1,r:"足関節を底屈し、内側に向ける（内旋する）と緊張します[cite:2575]。"},
+    [cite_start]{q:"踵腓靭帯（CFL）が緊張する肢位は？",o:["外がえし","内がえし（回外）","背屈","底屈"],c:1,r:"足部を他動で回外（内がえし）すると、外果から斜め後下方に緊張します[cite:2578]。"},
+    [cite_start]{q:"後距腓靭帯（PTFL）の触診位置は？",o:["外果の後方","外果の前方","内果の後方","アキレス腱の上"],c:0,r:"外果の後方、距骨外側結節と同じ高さで触れます[cite:2583]。"},
+    [cite_start]{q:"アキレス腱の付着部にある脂肪体が押し出される肢位は？",o:["底屈位","背屈位","内反位","外反位"],c:1,r:"背屈位では踵骨とアキレス腱の角度が鋭角となり、脂肪体が押し出されます[cite:2592]。"},
+    [cite_start]{q:"足背で触知できる動脈は？",o:["後脛骨動脈","足背動脈","腓骨動脈","大腿動脈"],c:1,r:"足背内側（第1-2中足骨間付近）で足背動脈の拍動を触知できます[cite:2595]。"},
+    [cite_start]{q:"母趾内転筋の作用として重要なのは？",o:["縦アーチの保持","横アーチの保持","足指の伸展","背屈"],c:1,r:"足底を横断しているため、横アーチを保持する作用があります[cite:2599]。"},
+    [cite_start]{q:"外反母趾の進行防止に寄与する筋として挙げられているのは？",o:["母趾外転筋","長母趾伸筋","前脛骨筋","腓腹筋"],c:0,r:"母趾外転筋、短趾屈筋、母趾内転筋などが寄与します[cite:2599]。"},
+    [cite_start]{q:"二分靭帯（Y靭帯）の損傷しやすい部位は？",o:["足背外側","足底","内果下","アキレス腱"],c:0,r:"足背の外側、踵骨から舟状骨・立方骨へ向かう部位で損傷しやすいです[cite:2595]。"},
+    [cite_start]{q:"長母趾屈筋腱が通る「載距突起の下」にある溝の名前は？",o:["長母趾屈筋腱溝","腓骨筋滑車","足根洞","内転筋管"],c:0,r:"載距突起の下方にある長母趾屈筋腱溝を通過します[cite:2406]。"}
 ];
 
 // 3つのプールを結合
-const questionPool = poolPart1.concat(poolPart2, poolPart3);
+const questionPool = poolPart1.concat(poolPart2);
 
 // シャッフル関数
 function shuffle(array) {
@@ -212,9 +256,6 @@ const feedbackBox = document.getElementById('feedback');
 const nextBtn = document.getElementById('next-btn');
 const progress = document.getElementById('progress');
 const scoreDisplay = document.getElementById('score');
-
-// 初期化：開始画面に問題数を表示（オプション）
-// document.querySelector('#start-screen p').innerText += ` (全${questionPool.length}問)`;
 
 // クイズ開始
 function startQuiz() {
