--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ const poolPart1 = [
     {q:"膝蓋下脂肪体はどの靭帯の深層に存在するか？",o:["内側側副靭帯","外側側副靭帯","膝蓋靭帯","前十字靭帯"],c:2,r:"膝蓋骨と脛骨粗面をつなぐ膝蓋靭帯の深層に存在します。",s:"56ページ"},
     {q:"膝蓋下脂肪体の触診で、一方を推すと反対側がどうなるか？",o:["凹む","押し出される（膨らむ）","変わらない","痛む"],c:1,r:"連結しているため、一方を押すと反対側の指に押し出される感覚があります。",s:"57ページ"},
     {q:"大腿四頭筋腱の形状は？",o:["円形","四角形","膝蓋骨底を底辺とする三角形","線状"],c:2,r:"内側広筋と外側広筋の間にあり、膝蓋骨底を底辺とする三角形をしています。",s:"58ページ"},
-    {q:"膝蓋靭帯の緊張を確認する動作は？",o:["膝を伸ばして踵を持ち上げる（床を押す）","膝を曲げる","つま先を上げる","膝を内に入れる"],c:0,r:"膝90度屈曲位で、踵で床を押す（膝伸展しようとする）と緊張します。",s:"58ページ"},
+    {q:"膝蓋靭帯の緊張を確認する動作は？",o:["膝を伸ばして踵を持ち上げる（床を押す）","膝を曲げる","つま先を上げる","膝を内に入れる"],c:0,r:"膝90度屈曲位で、踵で床を押す（等尺性収縮）と膝蓋靭帯が緊張し、幅を確認しやすくなります。",s:"58ページ"},
     {q:"内側側副靭帯（MCL）の触診位置は？",o:["関節裂隙の前方","関節裂隙の側方で指が入らなくなる部分のさらに2横指後方","膝蓋骨の直上","膝窩の中央"],c:1,r:"関節裂隙を側方へたどり、指が入らなくなる所からさらに2横指後方で再び触れる裂隙の間にあります。",s:"59ページ"},
     {q:"腸脛靭帯を触診する際、膝を伸ばしたまま腰をどうすると触れやすいか？",o:["反対側に引く","同側に突き出す","前屈する","後屈する"],c:1,r:"膝を伸ばしたまま腰を同側に突き出すと、大腿外側で緊張して触れやすくなります。",s:"61ページ"},
     {q:"腸脛靭帯の遠位付着部は？",o:["腓骨頭","脛骨粗面","ガーディー結節","内側顆"],c:2,r:"大腿骨外側上顆を通過し、脛骨のガーディー結節に付着します。",s:"61ページ"},
@@ -155,10 +155,19 @@ const poolPart1 = [
     {q:"長腓骨筋腱と短腓骨筋腱の位置関係（外果後方）は？",o:["長腓骨筋が前、短腓骨筋が後","短腓骨筋が前（深部）、長腓骨筋が後（表層）","並列している","交差している"],c:1,r:"短腓骨筋は外果の直後（深部）、長腓骨筋はその表層（後方）を通ります。指を後方にずらすと短腓骨筋の後縁に落ち込みます。",s:"73ページ"},
     {q:"総腓骨神経（腓骨神経）の触診部位は？",o:["腓骨頭の後方やや内側","腓骨頭の真上","脛骨粗面","膝窩中央"],c:0,r:"腓骨頭の後方・やや内側を圧迫し、指をスライドさせると索状の神経と放散痛を確認できます。",s:"73ページ"},
 ];
-    // --- 問題プール パート2 (膝軟部・下腿・足部・システム) ---
+    // --- 問題プール パート2 (膝・下腿・足部・システム) ---
 const poolPart2 = [
-    // 膝関節（軟部組織）
-    {q:"膝蓋下脂肪体の触診で、膝蓋靭帯の深層にある脂肪体を確認するために行う操作は？",o:["一方を押し込み、反対側の膨らみを感じる","膝を深く曲げる","膝蓋骨を上に引き上げる","強く叩く"],c:0,r:"膝蓋靭帯の両側を触れ、一方を押し込むと反対側に脂肪体が押し出されるのを確認します。",s:"57ページ"},
+    // 膝関節（骨・軟部組織）
+    {q:"膝蓋骨は、大腿四頭筋内に存在する人体最大の何か？",o:["扁平骨","種子骨","長管骨","不整骨"],c:1,r:"膝蓋骨は人体最大の種子骨です。",s:"45ページ"},
+    {q:"膝蓋骨の下縁（尖った部分）を確認するには、膝蓋骨をどう押すか？",o:["上縁を下方に押す","下縁を上方に押す","内側を押す","外側を押す"],c:0,r:"上縁を下方に押すと、下縁（膝蓋骨尖）が浮き上がり確認しやすくなります。",s:"46ページ"},
+    {q:"大腿骨膝蓋面（滑車）を触診するのに適した膝の肢位は？",o:["完全伸展位","90度屈曲位","深屈曲（全屈曲）位","過伸展位"],c:2,r:"膝を深く曲げると膝蓋骨が遠位に移動し、膝蓋骨の手前（近位）で膝蓋面が露出します。",s:"46ページ"},
+    {q:"脛骨粗面の位置は、膝蓋骨からどの程度遠位か？",o:["1横指","3横指","5横指","10横指"],c:1,r:"膝蓋骨から約3横指遠位にある骨の膨らみです。",s:"47ページ"},
+    {q:"大腿骨外側上顆は、大腿骨外側顆のどのあたりにあるか？",o:["最前方","中央やや後方","最後方","最遠位"],c:1,r:"大腿骨外側顆の中央やや後方で、最も膨らんだ部位です。",s:"49ページ"},
+    {q:"ガーディー結節の位置は？",o:["脛骨粗面の真下","脛骨粗面のすぐ外側（脛骨前外側部最近位）","腓骨頭の後ろ","膝蓋骨の上"],c:1,r:"脛骨粗面の外側にある斜線を近位へたどり、関節裂隙のすぐ遠位にある膨らみです。",s:"50ページ"},
+    {q:"腓骨頭は下腿近位のどの位置にあるか？",o:["最内側","最外側（かつ後方）","最前方","関節内"],c:1,r:"下腿近位部を膝の後方から触れるとき、最後方・最外側で触れる骨隆起です。",s:"51ページ"},
+    {q:"内転筋結節の位置は、内側上顆から見てどこか？",o:["1横指近位、1横指後方","1横指遠位、1横指前方","真下","真上"],c:0,r:"内側上顆から1横指近位、1横指後方に位置し、大内転筋腱が付着します。",s:"55ページ"},
+    {q:"膝蓋下脂肪体はどの靭帯の深層に存在するか？",o:["内側側副靭帯","外側側副靭帯","膝蓋靭帯","前十字靭帯"],c:2,r:"膝蓋骨と脛骨粗面をつなぐ膝蓋靭帯の深層に存在します。",s:"56ページ"},
+    {q:"膝蓋下脂肪体の触診で、一方を推すと反対側がどうなるか？",o:["凹む","押し出される（膨らむ）","変わらない","痛む"],c:1,r:"連結しているため、一方を押すと反対側の指に押し出される感覚があります。",s:"57ページ"},
     {q:"大腿四頭筋腱を触診する際、内側広筋と外側広筋の境界はどのような形になるか？",o:["逆ハの字（三角形）","平行","円形","一直線"],c:0,r:"膝蓋骨底を底辺とし、近位に向かって先細る「ハの字」あるいは三角形の形状をしています。",s:"58ページ"},
     {q:"膝蓋靭帯の幅と緊張を確認するのに適した動作は？",o:["膝伸展（踵で床を押す）","膝屈曲","股関節外旋","足関節背屈"],c:0,r:"膝を90度屈曲した状態で、踵で床を押す（等尺性収縮）と膝蓋靭帯が緊張し、幅を確認しやすくなります。",s:"58ページ"},
     {q:"内側側副靭帯（MCL）の触診で、関節裂隙のくぼみが消失する部位はどこか？",o:["膝内側の中央","膝蓋骨の直下","膝窩","内側広筋の上"],c:0,r:"関節裂隙を前方から後方へたどると、側方で靭帯により裂隙が触れなくなります。そのさらに後方で再び触れるようになります。",s:"59ページ"},
@@ -305,7 +314,7 @@ function checkAnswer(selectedIndex, selectedBtn, q) {
         feedbackBox.innerHTML = `<strong>正解！</strong><br>${q.r}<span class="source-ref">参照：${q.s}</span>`;
         feedbackBox.className = 'feedback';
         score++;
-        scoreDisplay.textContent = `正解数: ${score}`;
+        scoreDisplay.textContent = `正解数: ${score}`; // 修正箇所：scoreTextをscoreDisplayに変更
     } else {
         selectedBtn.classList.add('incorrect');
         // 正解のボタンを強調
